# fs_back

./: .env.example  .env.test  .gitignore  README.md  config.example.toml  config.toml  pyproject.toml  pytest.ini
.github/workflows/: cd.yaml  ci.yaml
alembic/: env.py
alembic/versions/: 04e55944b2bb_add_complaints.py  1e1d7ca1541a_init.py  20d4b1d14495_fix_booking_notify_id.py  3053afc06544_recreate_complaints_tables_with_uuid.py  35b4fcbeeb13_add_admin_history.py  42f85a36d5eb_init_schema.py  78e47a467286_fix_booking_user_id_type.py  8e64847fb6be_change_enum_again.py  a1067bc75353_auth_session.py  a65ef663550a_add_booking_celery_task_ids.py  be472b9115a5_change_enum_fix.py  d603f62ad583_change_enum_last.py  e823076ad5a1_add_complaints.py  f4b682c1b01d_change_enum.py
infra/: Dockerfile  entrypoint.sh
infra/dev/: docker-compose.yaml
infra/test/: docker-compose.test.yml
src/adapters/: di.py
src/adapters/celery/: app.py  broker.py  tasks.py
src/adapters/ip/: ip.py
src/adapters/redis/: cache.py  pubsub.py
src/adapters/s3/: client.py  s3.py  service.py
src/adapters/weather/: weather.py
src/api/: __main__.py  lifespan.py  main.py
src/apps/: __init__.py  health.py  seo.py
src/apps/admin/: __init__.py  di.py  events.py
src/apps/admin_history/: di.py  handlers.py
src/apps/auth/: __init__.py  di.py
src/apps/booking/: __init__.py  di.py  handlers.py
src/apps/complaints/: __init__.py  di.py
src/apps/devices/: __init__.py
src/apps/exmpl/: __init__.py
src/apps/mappers/: booking.py  complaints.py  slots.py
src/apps/notify/: __init__.py
src/apps/slots/: __init__.py  di.py
src/apps/users/: __init__.py  di.py
src/apps/weather/: __init__.py  di.py
src/core/config/: __init__.py  config.py
src/core/constants/: hint.py
src/core/db/: __init__.py  base.py  db.py  uow.py
src/core/dependencies/: __init__.py  admin.py  db.py  hint.py  services.py  user.py
src/core/di/: container.py
src/core/events/: bus.py  (+2 more)
tests/: conftest.py
tests/e2e/: test_admin_user_crud_flow.py  test_auth_flow.py  test_booking_flow.py  test_complaint_file_flow.py
tests/integration/: test_admin_routes.py  test_auth_routes.py  test_booking_routes.py  test_complaints_routes.py  test_health_routes.py  test_slots_routes.py  test_users_routes.py  test_validation_errors.py  test_weather_routes.py
tests/unit/: test_auth_service.py  test_booking_service.py  test_complaint_service.py  test_slot_service.py  test_weather_endpoint.py
(+103 files in other folders)
