[project]
name = "fastapi-monolith-template"
version = "0.1.0"
description = "The templete which will help you to build a powerfull API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "pytest-cov>=5.0.0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "black>=25.9.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "python-jose[cryptography]>=3.5.0",
    "redis>=6.4.0",
    "ruff>=0.11.12",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
    "psycopg2-binary",
    "celery>=5.5.3",
    "minio>=7.2.20",
    "python-multipart>=0.0.22",
    "aioboto3>=15.5.0",
    "tenacity>=9.1.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
]

lint.select = [
    "E", # pycodestyle (errors)
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # bugbear
    "C90", # mccabe (complexity)
]

lint.ignore = [
    "B008", # do not call function in default arg
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = true


[tool.ruff.lint.isort]
split-on-trailing-comma = false
